Add Ring+Compojure deps

--- a/resources/log4j2.properties
+++ b/resources/log4j2.properties
@@ -38,3 +38,9 @@ appender.errorfile.filter.threshold.level = error
 appender.errorfile.layout.type = PatternLayout
 appender.errorfile.layout.pattern = ${defaultPattern}
 appender.errorfile.policy.type = TimeBasedTriggeringPolicy
+
+# Turn off 3rd party libraries logging
+loggers = jetty
+
+logger.jetty.name = org.eclipse.jetty
+logger.jetty.level = error
